- Fix Analysis Edit files tab so that unregistered files show and can be saved with comment